--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "bootstrap": "4.3.1",
+    "bootstrap-tagsinput": "^0.7.1",
+    "bootstrap-typeahead": "^2.3.2",
     "bootswatch": "^4.4.1",
+    "chosen": "^0.0.2",
+    "chosen-jquery": "^0.1.1",
+    "chosen-js": "^1.8.7",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
+    "tether": "^1.4.7",
     "turbolinks": "^5.2.0",
-    "typeahead.js": "^0.11.1"
+    "typeahead.js": "^0.11.1",
+    "webpack": "^4.41.6"
   },
   "version": "0.1.0",
   "devDependencies": {
