--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.2.2",
+    "@rails/webpacker": "^4.0.0-rc.8",
     "bootstrap": "4.3.1",
     "bootstrap-tagsinput": "^0.7.1",
     "bootstrap-typeahead": "^2.3.2",
