--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
     "tether": "^1.4.7",
+    "toastr": "^2.1.4",
     "turbolinks": "^5.2.0",
     "typeahead.js": "^0.11.1",
     "webpack": "^4.41.6"
